--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -7,8 +7,8 @@ SEZIONE GENERALE
 html, body {
 	width: 100%;
 	height: 100%;
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	font-size: 100%;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	background-image: url("culo.jpg");
@@ -28,11 +28,10 @@ SEZIONE INTESTAZIONE
 	float: left;
 	padding: 0.25em;
 	width: 9em;
-	
 	margin-right: 2.5%;
 	margin-left: 2.5%;
 	position:relative;
-	z-index: 5;
+	z-index: 1;
 }
 
 
@@ -45,38 +44,27 @@ SEZIONE MENU
 
 #Menu {
 	background-color: black;
-	width:100%;
 	opacity:0.8;
-	
-
 }
 
 #Menu ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
-	
-	
+	overflow: hidden;	
 }
 
 #Menu li {
 	float: left;
-
-	
 }
 
 #Menu li a {
 	display: block;
 	color:#DAAC5E;
-	text-align: center;
-	
-    text-decoration: none;
-    font-weight:bold;
-    font-size:100%;
-    padding:2em 2.214em;
-
-    
+	text-align: center;	
+	text-decoration: none;
+	font-weight:bold;
+	padding:2em 2.214em;   
 }
 
 #Menu li a:hover:not(.active) {
