--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -11,7 +11,7 @@ html, body {
 	padding: 0;
 	font-size: 100%;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
-	background-image: url("culo.jpg");
+	background-image: url("../CSS/culo.jpg");
 	background-size: contain;
 	background-repeat: no-repeat;
 }
