--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -11,9 +11,6 @@ html, body {
 	padding: 0;
 	font-size: 100%;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
-	background-image: url("../IMAGES/Sfondo.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
 }
 
 
@@ -24,6 +21,11 @@ SEZIONE INTESTAZIONE
 =========================
 */
 
+#Intestazione {
+	position: fixed;
+	width: 100%;
+}
+
 #logo {
 	float: left;
 	padding: 0.25em;
@@ -31,16 +33,8 @@ SEZIONE INTESTAZIONE
 	margin-right: 2.5%;
 	margin-left: 2.5%;
 	position:relative;
-	z-index: 1;
+	z-index: 5;
 }
-
-
-
-/*
-=========================
-SEZIONE MENU
-=========================
-*/
 
 #Menu {
 	background-color: black;
@@ -64,7 +58,7 @@ SEZIONE MENU
 	text-align: center;	
 	text-decoration: none;
 	font-weight:bold;
-	padding:2em 1.1em;   
+	padding:2em 0.3em;   
 }
 
 #Menu li a:hover:not(.active) {
@@ -85,8 +79,9 @@ SEZIONE DESCRIZIONE
 =========================
 */
 
-#Descrizione {
-	
+#Sfondo {
+	max-width: 100%;
+	height: auto;
 }
 
 
@@ -99,13 +94,22 @@ SEZIONE FOOTER
 */
 
 #Footer {
-
+	padding: 1em;
+	text-align: center;
+	font-style: italic;
+	font-size: 0.8em;
+	color: white;
+	background-color: #323232;
 }
-	
 
+#Coni {
+	float: left;
+	padding: 0.5em;
+	width: 7%;
+}
 
-
-
-
-
-
+#asi {
+	float: right;
+	padding: 0.5em;
+	width: 7%;
+}
