--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -11,6 +11,7 @@ html, body {
 	padding: 0;
 	font-size: 100%;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
+	background-color: #323232;
 }
 
 
@@ -82,6 +83,7 @@ SEZIONE DESCRIZIONE
 #Sfondo {
 	max-width: 100%;
 	height: auto;
+	width:auto;
 }
 
 
@@ -94,7 +96,8 @@ SEZIONE FOOTER
 */
 
 #Footer {
-	padding: 1em;
+	
+	padding: 1.2em;
 	text-align: center;
 	font-style: italic;
 	font-size: 0.8em;
