--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -129,7 +129,7 @@ PAGINA PALESTRA
 	font-family:Arial;
 	color:rgb(0,120,255);
 	font-weight:800;
-	font-size:auto;
+	font-size:450%;
 	width:100%;
 	text-align:center;
 	left:0;
