--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -15,11 +15,9 @@ html, body {
 }
 
 
-#contenitore
-{
+#contenitore {
 	margin:1.46em;
-	border:1px solid #323232;
-	
+	border:1px solid #323232;	
 }
 
 /*
@@ -120,10 +118,10 @@ PAGINA PALESTRA
 =========================
 */
 
-#sfondopalestra
-{
+#sfondopalestra {
 	position:relative;
 }
+
 #titolopalestra {
 	position:absolute;
 	font-family:Arial;
@@ -135,18 +133,16 @@ PAGINA PALESTRA
 	left:0;
 	top:30%;
 }
-#imagepalestra {
-	width:100%;	
 
+#imagepalestra {
+	width:100%;
 }
 
-#DescrizionePalestra
-{
-
+#DescrizionePalestra {
 	color:white;
 }
-.separator 
-{
+
+.separator {
 	overflow: hidden;
 	position:relative;
 	display:block;
@@ -154,30 +150,30 @@ PAGINA PALESTRA
 	background-color: #eaeaea;
 	margin:10px 0;
 }
+
 #DescrizionePalestra h3 {
 	font-size:150%;
 	font-weight:600;
 }
-.ridimensionasx
-{
+
+.ridimensionasx {
 	float:left;
 	width:50%;
-	
 }
-.ridimensionadx
-{
+
+.ridimensionadx {
 	float:right;
 	width:50%;
-	
 }
-.limitesx
-{
+
+.limitesx {
 	margin-right:55%;
 }
-.limitedx
-{
+
+.limitedx {
 	margin-left:55%;
 }
+
 .sx {
 	text-align:left;
 	float:left;
@@ -185,11 +181,13 @@ PAGINA PALESTRA
 	font-family: 'Raleway', sans-serif;
 	font-size:95%;
 }
+
 .allenamento {
 	float:left;
 	width:50%;
 	height:25em;
 }
+
 .dx {
 	text-align:left;
 	float:right;
@@ -202,6 +200,7 @@ PAGINA PALESTRA
 {
 	float:left;
 }
+
 #genny
 {
 
@@ -259,11 +258,10 @@ PAGINA DOVE SIAMO
 	color: #FD0303;
 	font-size: 450%;
 	font-weight:800;
-    width: 100%;
-	margin-right: 20%;
+	width: 100%;
 	text-align: right;
-	left: -70px;
-    top: 0;
+	right: 10%;
+    	top: 0;
 }
 
 #imagedovesiamo {
@@ -306,7 +304,7 @@ PAGINA ATTIVITA
 	padding-left: 15%;
 }
 
-#AccordionMenu li{
+#AccordionMenu li {
 	list-style-type: none;
 }
 
@@ -332,7 +330,7 @@ PAGINA ATTIVITA
 	color: #ffa64d; /*arancione*/
 }
 
-#step{
+#step {
 	color: #ff80d5; /*rosa*/
 }
 
