--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -299,9 +299,30 @@ PAGINA ATTIVITA
 =========================
 */
 
+#sfondocorsipalestra {
+	position: relative;
+}
+
+#titolocorsipalestra {
+	position: absolute;
+	font-family: Arial;
+	color: #A0CA2A;
+	font-size: 450%;
+	font-weight:800;
+	width: 100%;
+	text-align: right;
+	right: 10%;
+    top: -8%;
+}
+
+#imagecorsipalestra {
+	width: 100%;
+}
+
 #AccordionMenu {
-	width: 70%;
-	padding-left: 15%;
+	width: 90%;
+	padding:0;
+	margin: 2em auto;
 }
 
 #AccordionMenu li {
@@ -310,7 +331,6 @@ PAGINA ATTIVITA
 
 #AccordionMenu img {
 	width: 100%;
-	height: 20em;
 	position: relative;
 }
 
