--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -5,8 +5,6 @@ SEZIONE GENERALE
 */
 
 html, body {
-	width: 100%;
-	height: 100%;
 	margin: 0;
 	padding: 0;
 	font-size: 100%;
@@ -25,6 +23,12 @@ html, body {
 SEZIONE INTESTAZIONE
 =========================
 */
+
+#Intestazione {
+	position: sticky;
+	top: 0;
+	z-index: 1;
+}
 
 #logo {
 	float: left;
@@ -50,7 +54,6 @@ SEZIONE INTESTAZIONE
 
 #Menu li {
 	float: left;
-	width: auto;
 }
 
 #Menu li a {
@@ -60,7 +63,6 @@ SEZIONE INTESTAZIONE
 	text-decoration: none;
 	font-weight: bold;
 	padding: 2em 0.9em;
-	width: 100%;
 }
 
 #Menu li a:hover:not(.active) {
