--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -88,11 +88,12 @@ SEZIONE FOOTER
 	color: white;
 	background-color: rgb(32,32,32);
 	overflow: hidden;
+	float:left;
 }
 
 #Footer h3 {
 	margin-top: 4em;
-	marginn-bottom: 3em;
+	margin-bottom: 3em;
 }
 
 .blocco {
