--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -420,3 +420,56 @@ div.panel {
     background-color: white;
     display: none;
 }
+
+/*
+===================
+SEZIONE CALENDARIO
+==================
+*/
+#calendario {
+	text-align:center;
+	width:96%;
+	height:22em;
+	font-weight:bold;
+	margin:2em;
+}
+.spinning {
+	background-color: green;
+}
+.spinning:hover {
+	background-color: rgb(0,230,0);
+}
+.powerpump {
+	background-color: blue;
+}
+.powerpump:hover {
+	background-color: rgb(0,100,180);
+}
+.jumpfit {
+	background-color: rgb(200,50,0);
+}
+.jumpfit:hover {
+	background-color: rgb(220,120,0);
+}
+.fitboxe {
+	background-color: red;
+}
+.fitboxe:hover {
+	background-color: rgb(120,0,0);
+}
+.step {
+	background-color: purple;
+}
+.step:hover {
+	background-color: rgb(120,0,40);
+}
+
+table, th, td {
+    border: 4px solid #DAAC5E;
+    border-collapse: collapse;
+    color:white;
+}
+td a {
+	color:white;
+	text-decoration: none;
+}
