--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -88,7 +88,7 @@ SEZIONE FOOTER
 	color: white;
 	background-color: rgb(32,32,32);
 	overflow: hidden;
-	float: left;
+	clear:both;
 }
 
 #Footer h3 {
