--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -496,28 +496,49 @@ SEZIONE CALENDARIO
 */
 #calendario {
 	text-align:center;
-	width:96%;
-	height:22em;
+	width:92.5%;
+	height:30em;
 	font-weight:bold;
 	margin:2em;
+	position:absolute;
+	top:48%;
+}
+#imgcal {
+	width:100%;
+	
+}
+#caltitle {
+	font-weight:800;
+	font-size:6vw;
+	text-align:center;
+	color:lightgray;
+
+}
+#firstrow {
+	color:white;
+	font-weight:bold;
+	font-size:120%;
 }
 .spinning {
 	background-color: green;
 }
 .spinning:hover {
 	background-color: rgb(0,230,0);
+	
 }
 .powerpump {
 	background-color: blue;
 }
 .powerpump:hover {
 	background-color: rgb(0,100,180);
+	
 }
 .jumpfit {
 	background-color: rgb(200,50,0);
 }
 .jumpfit:hover {
 	background-color: rgb(220,120,0);
+	
 }
 .fitboxe {
 	background-color: red;
@@ -529,15 +550,18 @@ SEZIONE CALENDARIO
 	background-color: purple;
 }
 .step:hover {
-	background-color: rgb(120,0,40);
+	background-color: rgb(120,0,40)
 }
 
-table, th, td {
-    border: 4px solid #DAAC5E;
+table,td {
+    border: 6px solid white;
     border-collapse: collapse;
     color:white;
+    opacity:0.9;
+    
 }
 td a {
 	color:white;
 	text-decoration: none;
+	width:auto;
 }
