--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -424,13 +424,14 @@ PAGINA ATTIVITA
 	font-size: 6vw;
 	font-weight:800;
 	width: 100%;
-	text-align: right;
-	right: 10%;
-    top: -10%;
+	text-align: left;
+	left: 10%;
+    top: -5%;
 }
 
 #imagecorsipalestra {
 	width: 100%;
+	height: 35em;
 }
 
 #AccordionMenu {
@@ -443,13 +444,11 @@ PAGINA ATTIVITA
 	list-style-type: none;
 }
 
-#AccordionMenu img {
-	width: 100%;
-	position: relative;
-}
-
 #powerpump {
 	color: #66ffff; /*celsestino*/
+}
+#pwptext{
+	background-color:#66ffff;
 }
 
 #spinning {
@@ -468,27 +467,43 @@ PAGINA ATTIVITA
 	color: #ff80d5; /*rosa*/
 }
 
-
-button.accordion {
-    background-color: #a6a6a6;
+.accordion {
+    background-color: #eee;
     cursor: pointer;
-    padding: 2em;
+    padding: 1em;
     width: 100%;
-    text-align: left;
-    border: 1px solid;
-    outline: none;
-    transition: 0.5s; /* tempo per colorarsi*/
+    border: 1em;
+    font-size: 24px;
+    transition: 0.4s;
 }
 
-button.accordion.active, button.accordion:hover {
+.active, .accordion:hover {
     background-color: #DAAC5E;
 }
 
-div.panel {
+.panel {
+    padding: 0 18px;
     background-color: white;
-    display: none;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 }
 
+#imgCorso{
+	width: 100%;
+	height: 20em; /* per capirmi Stefano!!! */
+}
+
+.container {
+    position: relative;
+}
+
+.text-block {
+    position: absolute;
+    bottom: 5%;
+    left: 4%;
+    color: white;
+}
 /*
 ===================
 SEZIONE CALENDARIO
