--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -76,6 +76,23 @@ SEZIONE INTESTAZIONE
 	background-color: #DAAC5E;
 }
 
+#Menu li button {
+	display: block;
+	color: white;
+	background-color: #4CAF50;
+	padding: 2em 0.9em;
+	width: auto;
+	height: 83px;
+	border: none;
+	font-size: 100%;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+#Menu li button:hover {
+	opacity: 0.8;
+}
+
 /*
 =========================
 SEZIONE FOOTER
@@ -579,4 +596,121 @@ td a {
 	color:white;
 	text-decoration: none;
 	width:auto;
+}
+
+/*
+======================
+POPUP LOGIN
+======================
+*/
+
+input {
+    color: #000;
+    font-size: 22px;
+    font-weight: 300;
+	text-indent: 0.5em;
+    height: 60px;
+    border: 1px solid #ecebe9;
+    margin-bottom: 20px;
+    background-color: #ecebe9;
+	width: 100%;
+}
+
+input:focus {
+	outline: none;
+	background-color: white;
+	border: 3px inset #ecebe9;
+}
+
+.imgcontainer {
+    text-align: center;
+    margin: 20px 0 0 0;
+    position: relative;
+}
+
+img.logo {
+    width: 300px;
+}
+
+.container {
+    padding: 16px;
+}
+
+.container h2 {
+	text-align: center;
+	color: #000;
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.container button {
+	background-color: #DAAC5E;
+	color: #000;
+    font-size: 22px;
+    font-weight: bold;
+	text-indent: 0.5em;
+	border: none;
+    height: 60px;
+    margin-bottom: 20px;
+	width: 50%;
+	cursor: pointer;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+#password {
+    float: right;
+    padding-top: 18px;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 5;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 30px;
+}
+
+.popup-content {
+    background-color: rgba(255,255,255,.95);
+    margin: 5% auto 15% auto;
+    border: 1px solid #888;
+    width: 50%;
+}
+
+.close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.close:hover {
+    color: red;
+    cursor: pointer;
+}
+
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+}
+    
+@keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
 }
