--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -505,7 +505,7 @@ PAGINA ATTIVITA
 #fitboxe {
 	color: red;
 	text-shadow: 5px 5px black;
-	background-image: url("../IMAGES/fitboxe.jpg");
+	background-image: url("../IMAGES/fitBoxe.jpg");
 }
 
 #colorjumpfit {
