--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -85,6 +85,7 @@ SEZIONE INTESTAZIONE
 	border: none;
 	font-size: 100%;
 	font-weight: bold;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
 	cursor: pointer;
 }
 
