--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -392,7 +392,7 @@ PAGINA DOVE SIAMO
 	width: 100%;
 	text-align: right;
 	right: 10%;
-    	top: 0;
+    top: 0;
 }
 
 #imagedovesiamo {
@@ -429,10 +429,6 @@ PAGINA DOVE SIAMO
 PAGINA ATTIVITA
 =========================
 */
-#DescrizioneAttivita{
-  	width: 90%;
-  	margin: 4% auto;
-}
 
 #sfondocorsipalestra {
 	position: relative;
@@ -447,24 +443,28 @@ PAGINA ATTIVITA
 	width: 100%;
 	text-align: left;
 	left: 10%;
-    	top: -5%;
+    top: -5%;
 }
 
 #imagecorsipalestra {
 	width: 100%;
-	height: 35em;
+}
+
+#DescrizioneAttivita{
+  	width: 90%;
+  	margin: 4% auto;
 }
 
 .accordion {
-    	cursor: pointer;
-    	padding: 18px;
+    cursor: pointer;
+    padding: 18px;
 	border: none;
-    	width: 100%;
+    width: 100%;
 	height: 300px;
-    	text-align: left;
-    	font-size: 7vw;
+    text-align: left;
+    font-size: 7vw;
 	font-weight: bold;
-    	transition: 0.4s;
+    transition: 0.4s;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -474,11 +474,11 @@ PAGINA ATTIVITA
 }
 
 .panel {
-    	padding: 0 18px;
-    	background-color: white;
-    	max-height: 0;
-    	overflow: hidden;
-    	transition: max-height 0.2s ease-out;
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
 }
 
 #colorpower {
@@ -536,6 +536,7 @@ PAGINA ATTIVITA
 SEZIONE CALENDARIO
 ==================
 */
+
 #calendario {
 	text-align:center;
 	width:92.5%;
@@ -545,63 +546,71 @@ SEZIONE CALENDARIO
 	position:absolute;
 	top:48%;
 }
+
 #imgcal {
 	width:100%;
-	
 }
+
 #caltitle {
 	font-weight:800;
 	font-size:6vw;
 	text-align:center;
 	color:lightgray;
-
 }
+
 #firstrow {
 	color:white;
 	font-weight:bold;
 	font-size:120%;
 }
+
 .spinning {
 	background-color: green;
 }
+
 .spinning:hover {
 	background-color: rgb(0,230,0);
-	
 }
+
 .powerpump {
 	background-color: blue;
 }
+
 .powerpump:hover {
 	background-color: rgb(0,100,180);
-	
 }
+
 .jumpfit {
 	background-color: rgb(200,50,0);
 }
+
 .jumpfit:hover {
 	background-color: rgb(220,120,0);
-	
 }
+
 .fitboxe {
 	background-color: red;
 }
+
 .fitboxe:hover {
 	background-color: rgb(120,0,0);
 }
+
 .step {
 	background-color: purple;
 }
+
 .step:hover {
 	background-color: rgb(120,0,40)
 }
 
-table,td {
+table, td {
     border: 6px solid white;
     border-collapse: collapse;
     color:white;
     opacity:0.9;
-    
 }
+
 td a {
 	color:white;
 	text-decoration: none;
@@ -620,16 +629,16 @@ input {
     font-weight: 300;
 	text-indent: 0.5em;
     height: 60px;
-    border: 1px solid #ecebe9;
+    border: 1px solid rgb(195,195,195);
     margin-bottom: 20px;
-    background-color: #ecebe9;
+    background-color: rgb(195,195,195);
 	width: 100%;
 }
 
 input:focus {
 	outline: none;
 	background-color: white;
-	border: 3px inset #ecebe9;
+	border: 2px inset #ecebe9;
 }
 
 .imgcontainer {
@@ -648,7 +657,7 @@ img.logo {
 
 .container h2 {
 	text-align: center;
-	color: #000;
+	color: #FFF;
     font-size: 22px;
     font-weight: 500;
 }
@@ -684,16 +693,15 @@ img.logo {
     width: 100%;
     height: 100%;
     overflow: scroll;
-    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
     padding-top: 30px;
 }
 
 .popup-content {
-    background-color: rgba(255,255,255,.95);
+    background-color: rgba(32,32,32,.9);
     margin: 5% auto 15% auto;
     border: 1px solid #888;
-    width: 50%;
+    width: 40%;
 }
 
 .close {
