--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -211,10 +211,6 @@ PAGINA HOME
 	transition: background-color 0.6s ease;
 }
 
-.active {
-	background-color: #DAAC5E;
-}
-
 /*
 =========================
 PAGINA PALESTRA
@@ -425,25 +421,21 @@ PAGINA ATTIVITA
 =========================
 */
 
-#sfondocorsipalestra {
-	position: relative;
-}
 
-#titolocorsipalestra {
-	position: absolute;
+#PresentazioneAttivita{
+	color: white;
 	font-family: Arial;
-	color: red;
-	font-size: 6vw;
-	font-weight:800;
-	width: 100%;
+	position: relative;
+	font-size: 18px;
 	text-align: left;
-	left: 10%;
+	left: 5%;
     top: -5%;
 }
 
-#imagecorsipalestra {
-	width: 100%;
+#titolocorsipalestra {
+	font-size: 50px;
 }
+
 
 #DescrizioneAttivita{
   	width: 90%;
@@ -455,17 +447,19 @@ PAGINA ATTIVITA
     padding: 18px;
 	border: none;
     width: 100%;
-	height: 300px;
-    text-align: left;
-    font-size: 7vw;
+    height: 100px;
+    text-align: center;
+    font-size: 24px;
 	font-weight: bold;
     transition: 0.4s;
-	background-repeat: no-repeat;
-	background-size: cover;
 }
 
 .accordion:focus {
 	outline:none;
+}
+
+.accordion:hover {
+    background-color: white; 
 }
 
 .panel {
@@ -476,54 +470,61 @@ PAGINA ATTIVITA
     transition: max-height 0.2s ease-out;
 }
 
+.accordion:after {
+    content: '\002B';
+    color: black;
+    font-weight: bold;
+    float: left;
+}
+
+.accordion.active:after {
+    content: "\2212";
+}
+
+.courseimg{
+	width: 100%;
+	height: 300px;
+}
+
+
 #colorpower {
-	border: 10px solid blue;
+	border: 5px solid blue;
 }
 
 #powerpump {
 	color: blue;
-	text-shadow: 5px 5px black;
-	background-image: url("../IMAGES/powerpump.jpg");
 }
 
 #colorspinning {
-	border: 10px solid green;
+	border: 5px solid green;
 }
 
 #spinning {
 	color: green;
-	text-shadow: 5px 5px black;
-	background-image: url("../IMAGES/spinning.jpg");
 }
 
 #colorfitboxe {
-	border: 10px solid red;
+	border: 5px solid red;
 }
 
 #fitboxe {
 	color: red;
-	text-shadow: 5px 5px black;
-	background-image: url("../IMAGES/fitBoxe.jpg");
 }
 
 #colorjumpfit {
-	border: 10px solid rgb(200,50,0);
+	border: 5px solid rgb(200,50,0);
 }
 
 #jumpfit {
 	color: rgb(200,50,0);
-	text-shadow: 5px 5px black;
-	background-image: url("../IMAGES/jumpfit.jpg");
 }
 
 #colorstep {
-	border: 10px solid purple;
+	border: 5px solid purple;
 }
 
 #step {
 	color: purple;
-	text-shadow: 5px 5px black;
-	background-image: url("../IMAGES/step.jpg");
 }
 
 /*
