--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -213,6 +213,7 @@ PAGINA HOME
 	height: 100%;
 }
 
+
 .image {
 	width: 100%;
 	height: 100%;
@@ -569,7 +570,7 @@ PAGINA GALLERIA
 
 #titologalleria {
 	position: absolute;
-	font-family: Arial;
+	font-family: Verdana;
 	color: rgb(107,27,87);
 	font-size: 6vw;
 	font-weight:800;
@@ -630,7 +631,7 @@ PAGINA DOVE SIAMO
 
 #titolodovesiamo {
 	position: absolute;
-	font-family: Arial;
+	font-family: Verdana;
 	color: #FD0303;
 	font-size: 6vw;
 	font-weight:800;
@@ -681,9 +682,9 @@ PAGINA ATTIVITA
 	text-align: center;
 }
 
-#PresentazioneAttivita{
+#Presentazione{
 	color: #DAAC5E;
-	font-family: Arial;
+	font-family: Verdana;
 	position: relative;
 	font-size: 18px;
 	text-align: left;
@@ -691,11 +692,11 @@ PAGINA ATTIVITA
     top: -5%;
 }
 
-#PresentazioneAttivita p{
+#Presentazione p{
 	color:white;
 }
 
-#titolocorsipalestra {
+#titoloPagina {
 	font-size: 50px;
 }
 
