--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -876,10 +876,16 @@ PAGINA DINAMICA NEWS
 }
 .titlenews {
 	text-align:center;
-	border-bottom:4px solid white;
-	margin:0%;
-	padding:0.5em;
+	margin:2%;
+	margin-bottom:0%;
 	color:white;
+}
+.pubblicazione
+{
+	float:right;
+	margin:0.5em;
+	color:white;
+	font-size: 12px;
 }
 .imgnews {
 	
