--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -15,7 +15,8 @@ html, body {
 
 #contenitore {
 	margin: 1.5em;
-	border: 1px solid #323232;	
+	border: 1px solid #323232;
+	background-image: url("../IMAGES/sfondo.jpg");
 }
 
 /*
