--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -18,7 +18,6 @@ html, body {
 	margin: 1.5em;
 	border: 1px solid #323232;
 	background-image: url("../IMAGES/sfondo.jpg");
-	overflow: hidden;
 	
 }
 
@@ -1038,7 +1037,6 @@ PAGINA AREA PERSONALE
 	overflow: hidden;
 	display: flex;
 	border-radius: 0.1875rem;
-	box-shadow: 6px 7px 0.4375rem rgba(0, 0, 0, 0.25);
 }
 
 .signupOverlay {
@@ -1059,10 +1057,7 @@ PAGINA AREA PERSONALE
 .leftContent {
 	position: relative;
 	z-index: 2;
-	padding: 2em;
-	-ms-flex-item-align: center;
-    -ms-grid-row-align: center;
-    align-self: center;
+	padding:9%;
 }
 
 label {
@@ -1084,11 +1079,8 @@ a {
 	width:100%;
 	height: 100%;
 	margin:auto;
-	max-width:525px;
-	min-height:670px;
 	position:relative;
 	background-color: #3D5A80;
-	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
 
 .login-html{
@@ -1099,53 +1091,21 @@ a {
 	padding-top:9%;
 }
 
-.login-html .sign-in-htm,
-.login-html .sign-up-htm {
-	top:0;
-	left:0;
-	right:0;
-	bottom:0;
-	position:absolute;
-	transform:rotateX(180deg);
-	backface-visibility:hidden;
-	transition:all .5s linear;
+.login-html h1 {
+	text-decoration: underline;
+    text-decoration-color: #2E4ED7;
+	text-underline-position: under;
 }
 
-.login-html .sign-in,
-.login-html .sign-up,
-.login-form .group .check {
-	display:none;
-}
-
-.login-html .tab,
 .login-form .group .label,
 .login-form .group .button {
 	text-transform:uppercase;
 	letter-spacing: 2px;
 	font-weight: 600;
-	cursor: pointer;
-}
-
-.login-html .tab {
-	font-size:22px;
-	margin-right:15px;
-	padding-bottom:5px;
-	margin:0 15px 10px 0;
-	display:inline-block;
-	border-bottom:2px solid transparent;
-}
-
-.login-html .sign-in:checked + .tab,
-.login-html .sign-up:checked + .tab {
-	color:#fff;
-	border-color:#1161ee;
 }
 
 .login-form {
-	min-height:345px;
 	position:relative;
-	perspective:1000px;
-	transform-style:preserve-3d;
 }
 
 .login-form .group {
@@ -1175,87 +1135,11 @@ a {
 
 .login-form .group .button {
 	background:#3F51B5;
+	cursor: pointer;
 }
 
-.login-form .group label .icon {
-	width:15px;
-	height:15px;
-	border-radius:2px;
-	position:relative;
-	display:inline-block;
-	background:rgba(255,255,255,.1);
-}
-
-.login-form .group label .icon:before,
-.login-form .group label .icon:after {
-	content:'';
-	width:10px;
-	height:2px;
-	background:#fff;
-	position:absolute;
-	transition:all .2s ease-in-out 0s;
-}
-
-.login-form .group label .icon:before {
-	left:3px;
-	width:5px;
-	bottom:6px;
-	transform:scale(0) rotate(0);
-}
-
-.login-form .group label .icon:after {
-	top:6px;
-	right:0;
-	transform:scale(0) rotate(0);
-}
-
-.login-form .group .check:checked + label {
-	color:#fff;
-}
-
-.login-form .group .check:checked + label .icon {
-	background:#1161ee;
-}
-
-.login-form .group .check:checked + label .icon:before {
-	transform:scale(1) rotate(45deg);
-}
-
-.login-form .group .check:checked + label .icon:after {
-	transform:scale(1) rotate(-45deg);
-}
-
-.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm {
-	transform:rotate(0);
-}
-
-.login-html .sign-up:checked + .tab + .login-form .sign-up-htm {
-	transform:rotate(0);
-}
-
-.hr {
+.line {
 	height:2px;
 	margin:60px 0 50px 0;
 	background:rgba(255,255,255,.2);
-}
-
-.foot-lnk {
-	text-align:center;
-}
-
-.cred {
-	position:fixed;
-	bottom:0;
-	padding-bottom:.5%;
-	padding-left:1%;
-	padding-top:.5%;
-	border-top:1px solid #eee;
-	width:100%;
-	background:;
-	color:#181818;
-}
-
-.cred>span {
-	padding-left:5px;
-	font-size:23px;
 }
