--- a/CSS/Desktop.css
+++ b/CSS/Desktop.css
@@ -1076,14 +1076,14 @@ PAGINA GALLERIA
 }
 
 /*
-=========================
-PAGINA AREA PERSONALE
-=========================
+==================================
+PAGINA AREA PERSONALE / FORM ADMIN
+==================================
 */
 
-.LoginSignupContainer {
+.FormContainer {
 	background: #3D5A80;
-	height: 80vh;
+	height: 85vh;
 	width: 60vw;
 	position: relative;
 	margin: 3% auto;
@@ -1145,10 +1145,13 @@ a {
 	padding-top:9%;
 }
 
-.login-html h1 {
-	text-decoration: underline;
-    text-decoration-color: #2E4ED7;
-	text-underline-position: under;
+#exit {
+	position: absolute;
+	top: 0;
+	right: 0.2em;
+	font-size: 50px;
+	color: red;
+	cursor: pointer;
 }
 
 .login-form .group .label,
@@ -1160,6 +1163,7 @@ a {
 
 .login-form {
 	position:relative;
+	margin-top: 5%;
 }
 
 .login-form .group {
